feat(analysis): added ListRunsPaged method support
feat(email/templates.go): transladed email content to Russian
